🐛 fix(tags): arabic tags stuck together

--- a/sass/parts/_posts_list.scss
+++ b/sass/parts/_posts_list.scss
@@ -30,6 +30,7 @@
         margin-top: 0.1rem;
 
         .tag {
+            display: inline-block;
             margin-right: 0.7rem;
             font-weight: 400;
             font-size: 0.75rem;
